--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     depends_on:
       - postgres
+    dns:
+      - 1.1.1.1
+      - 8.8.8.8
 
   postgres:
     image: postgres:13
